Fix bulk loading issues